# ChangeLog for games-fps/quake1-qonquer
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +quake1-qonquer-1.1.ebuild:
  Initial ebuild
