@@ -1,3 +1,3 @@
 DIST Qonquer_v1_1.zip 2140186 RMD160 82aff4525315cb008aa2f92a4176f94176dfb82d SHA1 86611c569285b9ca6776281f79851922178f396e SHA256 a415e21ca503e9080f22126f23ae6b54bd3d4aadee2eea17c47cc7eb2275f373
-EBUILD quake1-qonquer-1.1.ebuild 800 RMD160 11c3e24e4d3c896bb78ec7e628f79c5b8cf89390 SHA1 f1b04cec5b4f45e3278c01ef89a95755a0c18fc1 SHA256 aff384f01f753b484a2993ea32843ee09806d13efe940041b1a2deb1165d0dd0
-MISC ChangeLog 219 RMD160 0161b5891c1d8b12d2d305b731ab389555c67757 SHA1 73202b2fb95a939dcb73f924e0f378f30637c631 SHA256 bfd7cd3c607c0e4b485eef17f94bd9589d145ad5a1fe1be5d5f9aff74bc9e14d
+EBUILD quake1-qonquer-1.1.ebuild 810 RMD160 d93d1d2bd2c49a45511d7f1798c1105643d7ade2 SHA1 662856105eaff1b0589de5ba2f38cc46b3cdcce8 SHA256 badda66fa2116031ea6c8559675f88666569ed6268f1f74a55388f736ff29edb
+MISC ChangeLog 318 RMD160 4d1b85d392a5cfad2faca730a1ee6252f0b45697 SHA1 a065118ea75b6ae85014cc0b5b84f4523f604fa4 SHA256 2a0a635ead7924b51c4588e01fafb9b4c6fab1cfc9481e5de57061a0f63e029c
