@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -14,10 +14,11 @@ HOMESRC="http://www.wantonhubris.com/qonquer"
 DESCRIPTION="Qonquer - Fight waves of monsters in arena style maps with the aid of your minions."
 HOMEPAGE="${HOMESRC}/Qonquer.html"
 SRC_URI="${HOMESRC}/Qonquer_v1_1.zip"
+IUSE=""
 
 src_unpack() {
 	unpack ${A}
-	cd ${WORKDIR}
+	cd "${WORKDIR}"
 
 	rm -r __MACOSX Qonquer_v1_1/Qonquer/qcc "Qonquer_v1_1/Qonquer/sample maps" \
 		|| die "rm"
